# pycrosGui

./: .coverage  .gitignore  AcquisitionDialog.py  AtomDialog.py  BaseWidget.py  CoreLossDialog.py  DataDialog.py  ImageDialog.py  InfoDialog.py  LICENSE  LowLossDialog.py  PeakFitDialog.py  Quantifit-0.2025-1-0.py  Quantifit-0.983-v1.py  Quantifit-0.983-v1b.py  Quantifit-0.983.py  README.rst  SETUP_COMPLETE.md  TEST_FIX.md  coverage.xml  install_user.sh  jupyter console.py  periodic_table.py  plot_test.py  plot_test2.py  pyImageGui.py  pyTEMgui.py  pycrosgui.py  pyproject.toml  run_pycrosGUI.py  run_pycrosGUI.sh
.github/workflows/: actions.yml
pyTEMGui/: AcquisitionDialog.py  AtomDialog.py  CoreLossDialog.py  ImageDialog.py  InfoDialog.py  MicroscopeDialog.py  ProbeDialog.py
pyTEMGui/ProDialog.py/: MicroscopeDialog.py
pycrosGUI/: __init__.py  atom_dialog.py  base_widget.py  calculator_dialog.py  core_loss_dialog.py  data_dialog.py  eds_dialog.py  homepage.py  image_dialog.py  info_dialog.py  low_loss_dialog.py  main.py  peak_fit_dialog.py  periodic_table.py  probe_dialog.py
pycrosGui/: BaseWidget.py  DataDialog.py  periodic_table.py  pyTEMgui.py  version.py
tests/: conftest.py  test_imports.py
